--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -1,5 +1,6 @@
 @import 'normalize'
 @import 'helper'
+@import 'bootstrap/index'
 
 /* variables */
 $lightgrey = #999
@@ -12,7 +13,7 @@ html
 button
 input
 select
-textarea 
+textarea
   color: $black
 
 a
@@ -22,27 +23,27 @@ a:visited
 
 a:hover
   color: lighten($linkColor,10%)
-  
+
 body
   color: $black
   font-size: 1em
   line-height: 1.5
-  
+
 header
   background: $grey
   color:$black
   padding: 1em
-  
+
   nav
     float:right
     user-select:none
-    
+
   .nav-item
     float:left
     margin-left:.5em
-    
+
     a.active
       text-decoration:underline
-    
+
 .content
   padding: 1em
